# Privacyops-Platform

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
docker/: Dockerfile
docker/grafana/dashboards/: privacy_overview.json
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yml
sample_privacy_assets/consent_templates/: health_data_consent_ru.json  main_consent_ru.json
sample_privacy_assets/dpa/: dpa_template_ru.md
sample_privacy_assets/notices/: privacy_policy_ru.md
sample_privacy_assets/processing_maps/: sample_activities.json
src/: main.py
src/application/dto/: activity_dto.py  analytics_dto.py  auth_dto.py  consent_dto.py  dsr_dto.py  incident_dto.py  processor_dto.py
src/application/use_cases/: activity_use_cases.py  analytics_use_cases.py  auth_use_cases.py  consent_use_cases.py  dsr_use_cases.py  incident_use_cases.py  processor_use_cases.py
src/core/: config.py  container.py  logging.py  security.py  telemetry.py
src/domain/entities/: audit_event.py  consent_capture.py  consent_template.py  data_processing_activity.py  data_subject_request.py  evidence_item.py  legal_basis_record.py  localization_assessment.py  privacy_incident.py  processor_review.py  processor_vendor.py  retention_policy.py  transfer_record.py
src/domain/exceptions/: __init__.py
src/domain/repositories/: __init__.py  activity_repository.py  audit_repository.py  consent_repository.py  dsr_repository.py  evidence_repository.py  incident_repository.py  processor_repository.py  user_repository.py
src/domain/services/: consent_service.py  dsr_service.py  localization_service.py
src/domain/value_objects/: __init__.py  activity_status.py  consent_status.py  dsr_status.py  incident_severity.py  legal_basis_type.py  localization_status.py  user_role.py  (+1 more)
src/presentation/: deps.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_domain_services.py  test_entities.py  test_rules_engine.py  test_security.py  test_value_objects.py
(+50 files in other folders)
