[project]
name = "privacyops-platform"
version = "0.1.0"
description = "Enterprise PrivacyOps platform for Russian 152-FZ compliance"
requires-python = ">=3.12"

dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis[hiredis]>=5.0",
  "celery[redis]>=5.3",
  "flower>=2.0",
  "httpx[http2]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "dependency-injector>=4.41",
  "structlog>=24.1",
  "pyseto>=1.7",
  "passlib[bcrypt]>=1.7",
  "prometheus-client>=0.20",
  "prometheus-fastapi-instrumentator>=7.0",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-api>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "opentelemetry-instrumentation-redis>=0.45b0",
  "opentelemetry-instrumentation-celery>=0.45b0",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-ollama>=0.2",
  "orjson>=3.10",
  "tenacity>=8.3",
  "slowapi>=0.1.9",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "testcontainers[postgresql,redis]>=4.7",
  "respx>=0.21",
  "faker>=25.0",
  "hypothesis>=6.112",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "safety>=3.2",
  "pre-commit>=3.7",
  "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM", "TCH"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
